crates/dbkit/tests/ui/fail_db_enum_duplicate_wire_name.rs
#[derive(Debug, Clone, Copy, PartialEq, Eq, dbkit::DbEnum)]
#[dbkit(type_name = "job_state", rename_all = "snake_case")]
pub enum JobState {
    Planned,
    #[dbkit(rename = "planned")]
    Active, //~ ERROR dbkit: duplicate DbEnum wire name
}

fn main() {}
